4 - Java Programming  (Principles of Software Design)/Week 1/SearchingEarthquakeDataStarterProgram/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;E:\Windows\Courses\Coursera\Java Programming and Software Engineering Fundamentals\4 - Java Programming  (Principles of Software Design)\Week 1\SearchingEarthquakeDataStarterProgram
-d
E:\Windows\Courses\Coursera\Java Programming and Software Engineering Fundamentals\4 - Java Programming  (Principles of Software Design)\Week 1\SearchingEarthquakeDataStarterProgram\doc
-encoding
UTF-8
-charset
UTF-8
E:\Windows\Courses\Coursera\Java Programming and Software Engineering Fundamentals\4 - Java Programming  (Principles of Software Design)\Week 1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java
<---- end of javadoc command ---->
Loading source file E:\Windows\Courses\Coursera\Java Programming and Software Engineering Fundamentals\4 - Java Programming  (Principles of Software Design)\Week 1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java...
E:\Windows\Courses\Coursera\Java Programming and Software Engineering Fundamentals\4 - Java Programming  (Principles of Software Design)\Week 1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java:25: error: <identifier> expected
            if(qe.() < distMax) {
                  ^
1 error
